<resources>
    <string name="app_name">Library</string>
    <string name="search">Поиск</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_book_size">Sort by book size</string>
    <string name="add_book">add book</string>
    <string name="permission_required">Permission required</string>
    <string name="ok">OK</string>
    <string name="file_not_found">File not found</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="book_name">Book Name:</string>
    <string name="book_size">Book size:</string>
    <string name="book_author">Book author:</string>
    <string name="book_genre">Book genre:</string>
    <string name="last_update">Last update:</string>

    <string name="book_name_label">Book Name*</string>
    <string name="book_size_label">Book size*</string>
    <string name="book_author_label">Book author*</string>
    <string name="book_genre_label">Book genre*</string>
    <string name="last_update_label">Last update*</string>

    <string name="none_stub">None</string>
    <string name="doc_extension_error">Pick file with PDF extension!</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>