<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <HorizontalScrollView
        android:id="@+id/sort_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/sort_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/date"
                style="@style/SortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_date" />

            <RadioButton
                style="@style/SortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_name" />

            <RadioButton
                style="@style/SortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_book_size" />

        </RadioGroup>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>